# memory-layout-and-performance

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  readme-mlp.md  run.sh
src/: main.cpp  utils.cpp  utils.hpp
